Bug #4629: Fix MB/GB text overlapping dropdown arrow

--- a/src/sunstone/public/scss/app.scss
+++ b/src/sunstone/public/scss/app.scss
@@ -224,3 +224,7 @@ meter {
 .alert-color {
   color: $alert-color;
 }
+
+#mb_input_unit {
+  width: 4em;
+}
